<resources>
    <string name="app_name">24 Recycle</string>
    <string name="title_activity_make_payment">MakePayment</string>
    <string name="scan">Scan</string>
    <string name="acc_select">Please select an account to make payment</string>
    <string name="account_inexistent">Account Doesn\'t Exist? \n Tap create Acount to create a new Account</string>
    <string name="make_payment">\t\t\t\Add Points\t\t\t\t</string>
    <string name="create_account">\t\t\t\t Sign Up \t\t\t\t</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fill_form">\t Keep Ghana clean \t</string>
    <string name="type_your_password_here"> Password </string>
    <string name="type_your_email_here">Email</string>
    <string name="balance_title">Kindly find the balances of all accounts below</string>
    <string name="accs_balances">Accounts and balances to be displayed here</string>
    <string name="get_all_accounts_balances">\t Get all accounts balances\t</string>
    <string name="todo">TODO</string>
    <string name="zoomlion">ZoomLion</string>
    <string name="essentials">Essentials</string>
    <string name="bigben">Big Ben</string>
    <string name="akorno">Akorno</string>
    <string name="essentialsInt">Purchase Item From Essentials</string>
    <string name="bigbenInt">Purchase Item From Big Ben</string>
    <string name="akornoInt">Purchase Item From Akorno</string>
    <string name="stakeholders">Purchase Item(s)</string>
    <string name="login">\t\t\t\t Sign In \t\t\t\t</string>
    <string name="Log_out">Log out</string>
    <string name="welcome">RePsyche</string>
    <string name="user_name">User name</string>
    <string name="Price">Price</string>
    <string name="show_data_for_users">Show Data for Users</string>
    <string name="the_the_guardian_of_our_future_award_goes_to">The “The Guardian of our Future” award goes to:</string>
    <string name="winner">Winner</string>
    <string name="get_guardian">Get Guardian</string>
    <string name="textview">TextView</string>
    <string name="my_account">My Account</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_about">About</string>
    <string name="abst">\t\t\t\t\t\t\t <b> ABSTRACT </b> \n Plastics have been so helpful when it comes to packaging products. However, after the product is used, its package becomes a nuisance insociety as it piles up to the already existing litters in our environment. These waste products tend to cause air pollution, water pollution, soil contamination and multiple diseases. For these reasons and many more, it is prudential to devise an efficient and motivating way of managing waste products. It is in this light that our project seeks to build an interactive application where users can scan and take their waste products to a stakeholder for recycling and get paid instantly. The application is meant to be used by stakeholders and users where stakeholders have access to accounts and balances of users and users can always scan products (barcodes) and use their credit to buy items from partnered stakeholders. Users are also ranked based on how dedicated they are to waste management and at the end of each week,the most dedicated user wins an award called, \"The guardian of our future\". The project uses android studio and Firebase to manage user data and interactions.\n\t\t\t\t\t\t\t <b>INTRODUCTION</b> \n Improper disposal of waste and failure to recycle plastics are major global problems that need serious attention. According to the United Nations, Only 9% of all plastic waste ever produced has been recycled. About 12% has been incinerated, while the remaining  79% has accumulated in the natural environment. The situation is worse when it comes to Africa. In 2010, Africa was estimated to have 4.4 million metric tonnes of mismanaged plastic waste; a figure that could rise to 10.5 million tonnes in 2025 if nothing is done. Developing countries in Africa contribute a greater proportion to this number as they have inefficient or no means of managing waste. In Ghana for instance, of the plastic that is generated into waste, only an estimated 2% is recycled in the country, the remaining 98% litter the streets and clog drainage systems. To solve this problem, we propose a system that motivates plastic product users to return their plastic waste for recycling and get paid. This is achieved with aid of a mobile app that enables users to scan the bar-codes of products for credit and then handover the product to stakeholders. The system also notifies the waste management company (Zoomlion) when waste bins are full to ensure high sanitation in the country. Once this is successful, SDGs 1, 3, 6, 13 and 14 which are dedicated to no poverty, good health and well being, clean water and sanitation, climate action and life on water will be gradually achieved as the project will become a source of income,  a means to keep our environment clean and prevent the flow of plastic waste into the oceans.\n\t\t\t\t\t\t\t <b>RESEARCH AND RELATED WORK</b> \n According to Pope, many companies like Recyclebank in the United States are willing to pay people who provide plastic waste for recycling, but few of such companies exist in Africa. One of such is, which rewards residents for collecting and taking some selected waste materials to selected collection points in Nigeria.On the other hand, practically none of such companies exists in Ghana. Considering this, we seek to provide a mobile application which makes Ghanaians and Africans at large cultivate the habit of waste segregation and recycling by earning points to purchase items in some shops. This mobile application will make collection of plastic waste for recycling more convenient for both stakeholders like waste management companies (Zoomlion) and people who produce plastic waste materials, thereby promoting sustainable development. \n\t\t\t\t\t\t\t <b>PROBLEM STATEMENT</b> \n The quantity of plastic waste churned into the system annually does not tally with the amount of plastic waste recycled implying that, more plastic wastes are introduced into the environment on daily basis. In developing African countries particularly Ghana, Waste management companies have no means to collect plastic waste products from users who are not motivated to put their waste products in the right place and therefore litter the environment.\n\t\t\t\t\t\t\t <b>HOW THE SYSTEM WORKS</b> \n The user first needs to sign-up or sign-in to the system which is authenticated using Firebase. After this, the user can view collected points or collect points by scanning the barcode or QR code on waste products like cans and bottles. Provided that item has already been scanned and exists in the system database, the user is prompted of the duplication, else the points are credited to the user\'s account. User can then use collected points to purchase items at selected shops, but this depends on how much points the user has collected and the total price of the items. The waste management company will then be prompted by the system to collect waste from user for recycling if user\'s bin is full. \n\t\t\t\t\t\t\t <b>CONCLUSION</b> \n This project seeks to improve upon waste management techniques and recycling of plastic waste. It implores the services of an android application to design a system that enables users scan barcodes on their plastic wastes prior to depositing them into bins and get paid instantly. The system notifies waste management companies when bins are full and gives users the chance to use their credit to pay for goods and services from stakeholder. The software works as expected and is designed to detect duplicates in order to prevent users from scanning one product more than once. This project used android studio, zxing library and firebase authentication to meet its user requirements.\n\n THANK YOU!!!</string>
    <string name="about_the_project">About The Project</string>

</resources>
