<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stakeback"
    tools:context=".Stakeholder">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/stakeback"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stakeHolderName"
            android:layout_width="223dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewUsersData"
            android:layout_width="204dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/mybutton"
            android:onClick="showUserData"
            android:text="@string/show_data_for_users"
            android:textColor="#FAF7F7" />

        <Button
            android:id="@+id/viewUsersData3"
            android:layout_width="158dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/mybutton"
            android:onClick="logOutStakeholder"
            android:text="@string/Log_out"
            android:textColor="#FAF7F7" />
    </LinearLayout>

</FrameLayout>