<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/coconut"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="593dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="192dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace"
            app:layout_constraintBottom_toTopOf="@+id/emailS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/fill_form"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/emailS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/userNameS"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/login_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textColor="#FDFBFC"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/passwordS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/emailS"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/login_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/type_your_email_here"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/passwordS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordS"
            style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/login_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/type_your_password_here"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailS"
            tools:targetApi="o" />


        <Button
            android:id="@+id/buttonS"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:layout_marginBottom="12dip"
            android:background="@drawable/mybutton"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordS" />

    </LinearLayout>
</FrameLayout>